# EcoWave

./: .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  apply_and_validate.sh  bis_manifest.json  boe_millennium_manifest.json  cycles_manifest.json  docker-compose.yml  email_professeur.md  long_history_manifest.json  mkdocs.yml  pyproject.toml  quarterly_manifest.json  requirements.txt  scoring_rules.md  sectoral_history_manifest.json  sources_manifest.json
annotations/: README.md  model_scores_qualitative.csv  model_scores_qualitative_2008.csv  model_scores_qualitative_2016.csv
app_streamlit/: README.md  app.py.disabled
db/: README.md  schema.sql  schema_version.txt  seed_variables.sql
docs/: bibliographie.md  case_study_cn_bis_kondratieff.md  case_study_g7_long_uk_boe_kondratieff.md  case_study_wen_2005_test.md  case_study_wld_wb_kondratieff.md  data.md  data_sources_cited.md  dx_diagnostics.md  evidence_per_variable.md  figures.md  forecast_benchmark.md  glossary.md  groupes.md  groups.md  how_to_navigate.md  implications_of_cluster.md  index.md  methodology_beyond_cycles.md  methodology_differencing_for_kondratieff.md  methodology_safeguard_roadmap_14.md  sources.md
ecowave/: cli.py  config.py  db.py  evaluation.py  pilots.py  pipeline.py  validation.py
events/: events_master.csv
methodology/: anti_pseudoscience_rules.md  composite_indicator.md  cycle_methods_survey.md  feuille_de_route.md  garde_fous.md  improvement_roadmap.md  methodes_decomposition.md  multi_cycle_decomposition.md  normalization_rules.md  trois_portes.md  (+1 more)
(+252 files in other folders)
